deploy/docker/cp-run-policy-manager/templates/common-run-policy-template.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: <POLICY_NAME_PREFIX>-runs-policy-non-sensitive
  namespace: default
  labels:
    owner: <OWNER>
    network_policy_type: common
spec:
  selector: owner == '<OWNER>' && sensitive != 'true' && network_policy_type != 'internal'
  types:
    - Ingress
  ingress:
    - action: Allow
      source:
        selector: (!has(owner) || (owner == '<OWNER>' && sensitive != 'true' && network_policy_type != 'internal'))
